--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         Эффективные решения </br>
                         для вашего бизнеса
                     </h1>
-                    <a class="main-title-button" href="">Заказать услугу</a>
+                    <button class="main-title-button" href="">Заказать услугу</button>
 
                 </div>
             </div>
