--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,13 @@
                 <ul class="project-container">
                     <li class="project-card">
                         <a href="">
-                            <img class="project-image" title="Технокряк" src="./img/portfolio-images/технокряк.jpg" alt="Технокряк" width="370" height="294">
+                            <div class="project-block">
+                                <img class="project-image" title="Технокряк" src="./img/portfolio-images/технокряк.jpg" alt="Технокряк" width="370" height="294">
+                                <div class="project-image-info">
+                                    <p class="project-image-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="under-image-text">
                                 <h3 class="project-name">Технокряк</h3>
                                 <p class="description">Веб-сайт</p>
@@ -83,7 +89,12 @@
                     </li>
                     <li class="project-card">
                         <a href="">
-                            <img class="project-image" title="Постер New Orlean vs Golden Star" src="./img/portfolio-images/постер-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                            <div class="project-block">
+                                <img class="project-image" title="Постер New Orlean vs Golden Star" src="./img/portfolio-images/постер-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                                <div class="project-image-info">
+                                    <p class="project-image-text">Если ты перейдешь по этой ссылке, мы научим тебя рубаться в баскетбол, как мужики на фотке.</p>
+                                </div>
+                            </div>
                             <div class="under-image-text">
                                 <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
                                 <p class="description">Дизайн</p>
@@ -92,7 +103,12 @@
                     </li>
                     <li class="project-card">
                         <a href="">
-                            <img class="project-image" title="Ресторан Seafood" src="./img/portfolio-images/ресторан-seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                            <div class="project-block">
+                                <img class="project-image" title="Ресторан Seafood" src="./img/portfolio-images/ресторан-seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                                <div class="project-image-info">
+                                    <p class="project-image-text">Еда в этом ресторане изготовлена на 3D-принтере, программа для которого написана на языке C</p>
+                                </div>
+                            </div>
                             <div class="under-image-text">
                                 <h3 class="project-name">Ресторан Seafood</h3>
                                 <p class="description">Приложение</p>
@@ -101,7 +117,12 @@
                     </li>
                     <li class="project-card">
                         <a href="">
-                            <img class="project-image" title="Проект Prime" src="./img/portfolio-images/проект-prime.jpg" alt="Проект Prime" width="370" height="294">
+                            <div class="project-block">
+                                <img class="project-image" title="Проект Prime" src="./img/portfolio-images/проект-prime.jpg" alt="Проект Prime" width="370" height="294">
+                                <div class="project-image-info">
+                                    <p class="project-image-text">Готовь свои уши к зиме! </p>
+                                </div>
+                            </div>
                             <div class="under-image-text">
                                 <h3 class="project-name">Проект Prime</h3>
                                 <p class="description">Маркетинг</p>
@@ -110,7 +131,12 @@
                     </li>
                     <li class="project-card">
                         <a href="">
-                            <img class="project-image" title="Проект Boxes" src="./img/portfolio-images/проект-boxes.jpg" alt="Проект Boxes" width="370" height="294">
+                            <div class="project-block">
+                                <img class="project-image" title="Проект Boxes" src="./img/portfolio-images/проект-boxes.jpg" alt="Проект Boxes" width="370" height="294">
+                                <div class="project-image-info">
+                                    <p class="project-image-text">Чешуцца руки набить каму-та морду? Мичтаеш вышибать масги ни хуже братьев Кличко? Хотим тебя агарчить: тебе ваще не суда. Этат проэкт не имеет ничего общева с этим интелллектуальным видом спорта!</p>
+                                </div>
+                            </div>
                             <div class="under-image-text">
                                 <h3 class="project-name">Проект Boxes</h3>
                                 <p class="description">Приложение</p>
@@ -118,20 +144,36 @@
                         </a>
                     </li>
                     <li class="project-card">
-
                         <a href="">
-                            <img class="project-image" title="Inspiration has no borders" src="./img/portfolio-images/inspiration-has-no-borders.jpg" alt="Inspiration has no borders" width="370" height="294">
+                            <div class="project-block">
+                                <img class="project-image" title="Inspiration has no borders" src="./img/portfolio-images/inspiration-has-no-borders.jpg" alt="Inspiration has no borders" width="370" height="294">
+                                <div class="project-image-info">
 
+                                    <pre class="project-image-text">
+From now on a class "inspiration" 
+    in CSS has no borders! 
+            
+         .inspiration {
+            border: none;
+        }
+    </pre>
+
+                                </div>
+                            </div>
                             <div class="under-image-text">
                                 <h3 class="project-name" lang="en">Inspiration has no Borders</h3>
                                 <p class="description">Веб-сайт</p>
                             </div>
                         </a>
-
                     </li>
                     <li class="project-card">
                         <a href="">
-                            <img class="project-image" title="Издание Limited Edition" src="./img/portfolio-images/издание-limited-edition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                            <div class="project-block">
+                                <img class="project-image" title="Издание Limited Edition" src="./img/portfolio-images/издание-limited-edition.jpg" alt="Издание Limited Edition" width="370" height="294">
+                                <div class="project-image-info">
+                                    <p class="project-image-text">Если ты все еще смотришь эти всплывающие окна, значит ты хорошый ментор!</p>
+                                </div>
+                            </div>
                             <div class="under-image-text">
                                 <h3 class="project-name">Издание Limited Edition</h3>
                                 <p class="description">Дизайн</p>
@@ -140,7 +182,13 @@
                     </li>
                     <li class="project-card">
                         <a href="">
-                            <img class="project-image" title="Проект LAB" src="./img/portfolio-images/проект-lab.jpg" alt="Проект LAB" width="370" height="294">
+                            <div class="project-block">
+                                <img class="project-image" title="Проект LAB" src="./img/portfolio-images/проект-lab.jpg" alt="Проект LAB" width="370" height="294">
+                                <div class="project-image-info">
+                                    <p class="project-image-text">Корпоративный сайт для фабрики по производству ЛАБутенов
+                                    </p>
+                                </div>
+                            </div>
                             <div class="under-image-text">
                                 <h3 class="project-name">Проект LAB</h3>
                                 <p class="description">Маркетинг</p>
@@ -149,7 +197,12 @@
                     </li>
                     <li class="project-card">
                         <a href="">
-                            <img class="project-image" title="Growing Business" src="./img/portfolio-images/growing-business.jpg" alt="Growing Business" width="370" height="294">
+                            <div class="project-block">
+                                <img class="project-image" title="Growing Business" src="./img/portfolio-images/growing-business.jpg" alt="Growing Business" width="370" height="294">
+                                <div class="project-image-info">
+                                    <p class="project-image-text">Выращиваем сочный бизнес в короткие сроки!</p>
+                                </div>
+                            </div>
                             <div class="under-image-text">
                                 <h3 class="project-name" lang="en">Growing Business</h3>
                                 <p class="description">Приложение</p>
