--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header>
         <div class="main-container">
             <div class="header-block">
@@ -45,6 +46,7 @@
 
     </header>
     <main>
+        <!-- HERO -->
         <section class="hero">
             <div class="main-container">
                 <div class="hero-block">
@@ -52,12 +54,13 @@
                         Эффективные решения </br>
                         для вашего бизнеса
                     </h1>
-                    <button class="main-title-button" href="">Заказать услугу</button>
+                    <button class="main-title-button" data-modal-open href="">Заказать услугу</button>
 
                 </div>
             </div>
 
         </section>
+        <!-- ADVANTAGE -->
         <div class="main-container">
             <section class="advantage-container">
                 <h2 hidden>Преимущества компании</h2>
@@ -109,6 +112,7 @@
                 </ul>
             </section>
         </div>
+        <!-- OCCUPATION -->
         <div class="main-container">
             <section class="occupation">
                 <h2 class="secondary-title">Чем мы занимаемся</h2>
@@ -146,7 +150,7 @@
                 </ul>
             </section>
         </div>
-
+        <!-- TEAM -->
         <section class="team">
             <div class="main-container">
                 <h2 class="secondary-title">Наша команда</h2>
@@ -294,6 +298,7 @@
                 </ul>
             </div>
         </section>
+        <!-- CLIENTS -->
         <div class="main-container">
             <section class="clients">
                 <h2 class="secondary-title">Постоянные клиенты</h2>
@@ -353,6 +358,7 @@
             </section>
         </div>
     </main>
+    <!-- FOOTER -->
     <footer class="footer">
         <div class="main-container">
             <div class="footer-wrapper">
@@ -410,6 +416,18 @@
 
         </div>
     </footer>
+    <!-- MODAL WINDOW -->
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <div class="close-btn" data-modal-close>
+                <img class="close-cross" src="./img/close-black-18dp.svg" width="18" height="18">
+            </div>
+        </div>
+
+    </div>
+    <!-- SCRIPTS -->
+    <script src="./js/modal.js"></script>
+
 </body>
 
 </html>
